poprawa kontrolerow